src/objects/High_Level_Requirement__c.object
<CustomObject>
    <description>High level business objectives that can be used to group related detailed requirements.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Functional_Area__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>High_Level_Requirement_ID__c</fullName>
        <label>High Level Requirement ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Objective__c</fullName>
        <label>Project Objective</label>
        <picklist>
            <picklistValues>
                <fullName>Improve New Customer Acquisition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Sales to Existing Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Increase Retention of Existing Customers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Sales Effectiveness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Avoid Strategic Project Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce Business Operation Costs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remove Risk of Legacy Platform Use</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reduce Risk from Regulatory Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve Customer Interactions &amp; Insight</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Improve User Interaction</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>High Level Requirement</label>
    <listViews>
        <fullName>All</fullName>
        <columns>High_Level_Requirement_ID__c</columns>
        <columns>Functional_Area__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>Notes__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>High Level Requirement Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>High Level Requirements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>